@@ -184,9 +184,9 @@ public class HackathonService {
 	    	panelist.getUser().setAvailable(true);
 	    }
 	    Collections.sort(scores,(s1,s2)->s1.getSecond().compareTo(s2.getSecond()));
-	    hackathon.get().setFirstTeamId(scores.size()>=1?scores.get(0).getFirst():null);
-	    hackathon.get().setSecondTeamId(scores.size()>=2?scores.get(1).getFirst():null);
-	    hackathon.get().setThirdTeamId(scores.size()>=3?scores.get(2).getFirst():null);
+	    hackathon.get().setFirstTeamId(scores.size()>=1?String.valueOf(scores.get(0).getFirst()):null);
+	    hackathon.get().setSecondTeamId(scores.size()>=2?String.valueOf(scores.get(1).getFirst()):null);
+	    hackathon.get().setThirdTeamId(scores.size()>=3?String.valueOf(scores.get(2).getFirst()):null);
 	    updateHackathon(hackathon.get());
 	}
 
